--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "json-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "router": "^1.3.8",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/cli-plugin-router": "~5.0.0",
     "json-server": "^1.0.0-beta.0",
     "vite": "^5.2.0"
   }
